...
      to: 'closed'
    });
    navigator.push({
      screen: 'login',
      title: t('profile.screen_title'),
      passProps: {
        from: 'sidebar'
      }
    });
    return;
  }

  if (type === 'DeepLink' && link === 'profile') {
...
    });
    return;
  }

  if (type === 'NavBarButtonPress') {
    switch (id) {
      case 'menu':
        navigator.toggleDrawer({
          side: 'left',
          animated: true,
          to: 'open'
        });

...
